@@ -99,7 +99,7 @@
 				<td colspan="100">
 					<form method="GET" action="editentry">
 						<input type="hidden" name="id" value="" id="detail_id_edit">
-						<input type="submit" class="nobold" value="{{ 'Edit'|trans }}">
+						<input type="submit" class="nobold" value="&#9997;&nbsp;&nbsp;{{ 'Edit'|trans }}">
 					</form>
 				</td>
 			</tr>
@@ -107,7 +107,7 @@
 				<td colspan="100">
 					<form method="POST" action="editentry" onsubmit="return confirm('{{ 'Are you sure?'|trans }}');">
 						<input type="hidden" name="remove" value="" id="detail_id_remove">
-						<input type="submit" class="nobold" value="{{ 'Remove'|trans }}">
+						<input type="submit" class="nobold" value="&#9932;&nbsp;&nbsp;{{ 'Remove'|trans }}">
 					</form>
 				</td>
 			</tr>
